# zenith-bundler

./: .gitignore  BUNDLER_CONTRACT.md  Cargo.toml  README.md  SCRIPT_BOUNDARY_CONTRACT.md  dev-server.js  index.js  output.txt  package.json
_legacy_v1/: dev-server.js
_legacy_v1/src/: bundle-generator.ts  bundler.rs  bundler.ts  generateFinalBundle.ts  index.ts  lib.rs  native.ts  runtime-generator.ts  ssg-build.ts
_legacy_v1/src/discovery/: layouts.ts
_legacy_v1/src/plugins/: zenith-loader.ts
src/: bundle-generator.ts  bundle.rs  bundler.ts  css.rs  css.ts  html.rs  index.ts  lib.rs  main.rs  plugin.rs  runtime-generator.ts  spa-build.ts  ssg-build.ts  store.rs  types.ts  utils.rs
src/discovery/: componentDiscovery.ts
src/plugin/: css_cache.rs  mod.rs  zenith_loader.rs
tests/: contract_tests.rs  debug_output.rs  determinism.rs  hmr_tests.rs  integration.rs  module_graph_tests.rs  performance_guardrails.rs  process-seam.mjs
tests/fixtures/: hello.zen
