[package]
name = "zenith-bundler"
version = "0.1.0"
edition = "2021"
description = "Deterministic bundler for the Zenith framework — consumes sealed compiler output via Rolldown"
license = "MIT"

[lib]
crate-type = ["rlib"]

[[bin]]
name = "zenith-bundler"
path = "src/main.rs"

[dependencies]
# Zenith Compiler (sealed API)
zenith_compiler = { path = "../zenith-compiler/zenith_compiler" }

# Rolldown bundling engine (from git — crates.io v0.1.0 has dependency conflicts)
rolldown = { git = "https://github.com/rolldown/rolldown", package = "rolldown" }
rolldown_plugin = { git = "https://github.com/rolldown/rolldown", package = "rolldown_plugin" }
rolldown_common = { git = "https://github.com/rolldown/rolldown", package = "rolldown_common" }


# Serialization (validation, diagnostics)
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Async runtime
tokio = { version = "1.0", features = ["fs", "macros", "rt-multi-thread"] }

# Thread-safe concurrent map
dashmap = "6.0"

# Regex (post-build expression placeholder validation)
regex = "1.10"

# Logging
log = "0.4"

# String compatibility with Rolldown
arcstr = "1.2"


[dev-dependencies]
pretty_assertions = "1.4"
sha2 = "0.10"
hex = "0.4"
tempfile = "3.10"
tokio = { version = "1.0", features = ["full"] }
